// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/index.vue snapshot renders correctly if locale is "en" 1`] = `
<section
  class="section"
>
  <div
    class="columns is-mobile"
  >
    <card-stub
      icon="github"
      title="Free"
    >
      <span>
        Open source on 
        <a
          href="https://github.com/buefy/buefy"
        >
          GitHub
        </a>
      </span>
    </card-stub>
     
    <card-stub
      icon="cellphone-link"
      title="Responsive"
    >
      <span>
        <b
          class="has-text-grey"
        >
          Every
        </b>
         component is responsive
      </span>
    </card-stub>
     
    <card-stub
      icon="alert-decagram"
      title="Modern"
    >
      <span>
        Built with 
        <a
          href="https://vuejs.org/"
        >
          Vue.js
        </a>
         and 
        <a
          href="http://bulma.io/"
        >
          Bulma
        </a>
      </span>
    </card-stub>
     
    <card-stub
      icon="arrange-bring-to-front"
      title="Lightweight"
    >
      
      No other internal dependency
    
    </card-stub>
     
    <counter-stub />
  </div>
</section>
`;

exports[`pages/index.vue snapshot renders correctly if locale is "ja" 1`] = `
<section
  class="section"
>
  <div
    class="columns is-mobile"
  >
    <card-stub
      icon="github"
      title="無料"
    >
      <span>
        <a
          href="https://github.com/buefy/buefy"
        >
          GitHub
        </a>
         上でオープンソース開発
      </span>
    </card-stub>
     
    <card-stub
      icon="cellphone-link"
      title="レスポンシブ デザイン"
    >
      <span>
        <b
          class="has-text-grey"
        >
          すべての
        </b>
        コンポーネントがレスポンシブ
      </span>
    </card-stub>
     
    <card-stub
      icon="alert-decagram"
      title="モダンUI"
    >
      <span>
        <a
          href="https://vuejs.org/"
        >
          Vue.js
        </a>
         と 
        <a
          href="http://bulma.io/"
        >
          Bulma
        </a>
         で作成
      </span>
    </card-stub>
     
    <card-stub
      icon="arrange-bring-to-front"
      title="軽量"
    >
      
      他のライブラリに依存しない
    
    </card-stub>
     
    <counter-stub />
  </div>
</section>
`;
